<resources>
    <string name="app_name">SurveyApp(1.3.8)</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_device">BLE Device Scan</string>
    <string name="title_activity_topo_map">Topo</string>
    <string name="title_activity_auto_map">Auto</string>
    <string name="title_activity_stake_map">Map</string>
    <string name="prompt_search">Search your points</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="height_in_meter">*Height in meter*</string>
    <string name="name">Name</string>
    <string name="operation">OPERATION</string>
    <string name="antenna_height">Antenna Height</string>
    <string name="_2_00">2.00</string>
    <string name="done">done</string>
    <string name="auto_survey">Auto Survey</string>
    <string name="_0_0">0.0</string>
    <string name="_0_00m">0.00m</string>
    <string name="p_name">P Name</string>
    <string name="code">Code</string>
    <string name="nmea_output">NMEA output</string>
    <string name="project_name">Project Name</string>
    <string name="operator">operator</string>
    <string name="date_n_time">Date n time</string>
    <string name="rover_list">Rover list</string>
    <string name="base_list">Base list</string>
    <string name="cartesian">Cartesian</string>
    <string name="geographical">Geographical</string>
    <string-array name="array_name">
        <item>--select--</item>
    </string-array>
    <string name="sky_plot">Sky Plot</string>
    <string name="gps">GPS</string>
    <string name="glonass">Glonass</string>
    <string name="sbas">SBAS</string>
    <string name="galileo">Galileo</string>
    <string name="beidou">Beidou</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="please_turn_on_internet_connection_to_continue">Please turn on internet connection to continue</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="oops_unable_to_find_data">OOps! Unable to find data, Visit Topo Survey PAge first!</string>
    <string name="vertical">Vertical</string>
    <string name="slope">Slope</string>
    <string name="empty_field">Empty field</string>
    <string name="antenna_setup">Antenna setup!</string>
    <string name="did_you_configure_antenna">Did you configure antenna? if not configure first!</string>
    <string name="configure">Configure</string>
    <string name="continue1">Continue</string>
    <string name="gps_setting">GPS settings</string>
    <string name="gps_is_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="data_inserted">Data inserted</string>
    <string name="data_not_inserted">Data not inserted</string>
    <string name="sorry_title_already_exist">Sorry! Title already exist, Enter another one.</string>
    <string name="select_all_fields_first">Select All fields First</string>
    <string name="current_task">Current Task!</string>
    <string name="no">NO</string>
    <string name="must_enter_value">Must enter Value</string>
    <string name="data_recieved_successfully">Data Recieved Successfully</string>
    <string name="oops_something_went_wrong">OOPS! Something went Wrong</string>
    <string name="command_write_successfully">command write successfully</string>
    <string name="command_write_fail_click">command write fail click on resend button for resend command</string>
    <string name="auto_base">Auto base</string>
    <string name="manual_base">Manual Base</string>
    <string name="rover">Rover</string>
    <string name="gsm">GSM</string>
    <string name="radio">Radio</string>
    <string name="bluetooth_connection">Bluetooth Connection!</string>
    <string name="try_to_connect">Try to connect…</string>
    <string name="device_already_configured">Device already Configured/BLE not connected</string>
    <string name="language_not_supported">Language not supported</string>
    <string name="init_failed">Init failed</string>
    <string name="processing_please_wait">Proccessing.., Please Wait!</string>
    <string name="invalid">invalid</string>
    <string name="standalone_mode">Standalone mode</string>
    <string name="not_applicable">Not applicable</string>
    <string name="rtk_fixed">RTK fixed</string>
    <string name="rtk_float">RTK float</string>
    <string name="estimated">estimated</string>
    <string name="manual_input_mode">manual input mode</string>
    <string name="simulation_mode">simulation mode</string>
    <string name="connection">Connection!</string>
    <string name="do_you_want_to_disconnect_bluetooth">Do you want to disconnect bluetooth?</string>
    <string name="yes_back">YES,Back</string>
    <string name="no_back">No,Back</string>
    <string name="base_config">Base Config</string>
    <string name="rover_config">Rover Config</string>
    <string name="battery">Battery</string>
    <string name="charging">Charging</string>
    <string name="fully_charged">Fully Charged</string>
    <string name="command_loading">Command Loading</string>
    <string name="please_wait">please wait…</string>
    <string name="type_here">"Type here..</string>
    <string name="configuration_name">Configuration Name</string>
    <string name="save">Save</string>
    <string name="base">Base</string>
    <string name="yes">YES</string>
    <string name="configured_successfully">configured successfully</string>
    <string name="not_configured">not configured!</string>
    <string name="wait_base_setup">"Wait! Base Setup</string>
    <string name="in_progress">In Progress</string>
    <string name="discard">Discard</string>
    <string name="done_base_setup">Done! Base Setup</string>
    <string name="completed">Completed</string>
    <string name="location">Location!</string>
    <string name="location_not_enabled">Location not enabled</string>
    <string name="open_setting">Open setting</string>
    <string name="back_options">Back options!</string>
    <string name="which_page_you_want_to_go">Which page you want to go?</string>
    <string name="task_page">Task page</string>
    <string name="home_page">Home page</string>
    <string name="work_options">Work options!</string>
    <string name="open_saved_configuration">Open saved configurations!</string>
    <string name="open">Open</string>
    <string name="skip">Skip</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="please_enter_a_valid_number">Please Enter A Valid Number</string>
    <string name="configure_rtk_first">Configure RTK first!</string>
    <string name="survey_finished">Survey Finished</string>
    <string name="start_new_survey">Start New Survey</string>
    <string name="your_previous_points">Your previous points</string>
    <string name="null_value">Null Value</string>
    <string name="route_type">Route type</string>
    <string name="your_connection_request_successfully">Your connection request successfully</string>
    <string name="your_connection_request_fail">Your connection request fail ! Retry again click on connect button</string>
    <string name="seems_you_are_not_connected">Seems,You are not connected</string>
    <string name="pos">Pos =</string>
    <string name="export">Export</string>
    <string name="csv">CSV</string>
    <string name="txt">txt</string>
    <string name="data_exported">Data Exported</string>
    <string name="export_new">Export!</string>
    <string name="choose_your_preferred_option">Choose your preferred option!</string>
    <string name="share">Share</string>
    <string name="updating_database">Updating Database</string>
    <string name="no_satellite_visible_here">No. of satellite visible here</string>
    <string name="your_reciever_battery_status">Your Receiver battery status</string>
    <string name="rtk_status">RTK Status</string>
    <string name="in_process">In process</string>
    <string name="success">Success</string>
    <string name="import_new">Import</string>
    <string name="select_task_first_or_create_new_one">Select task first or create new one</string>
    <string name="no_data_found">No Data found</string>
    <string name="open_csv">Open CSV</string>
    <string name="unsupport_csv_row">Unsupported CSV Row</string>
    <string name="save_data">Save Data!</string>
    <string name="do_you_want_to_save_these_data">Do you want to save these data?</string>
    <string name="data_saved_successfully">Data saved Successfully</string>
    <string name="oop_something_went_wrong">OOps!Something went wrong.</string>
    <string name="new_project">New Project</string>
    <string name="fields_are_empty">Fields are Empty</string>
    <string name="project_list">Project List</string>
    <string name="no_any_project_found">No any project found, Create first..</string>
    <string name="already_current_project">Already Current Project</string>
    <string name="project_selected">Project Selected</string>
    <string name="select_project_first">Select project first</string>
    <string name="project_removed">Project Removed</string>
    <string name="sorry">Sorry</string>
    <string name="current_project">Current Project!</string>
    <string name="file_name">File Name</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="dir">Dir.</string>
    <string name="directory">Directory</string>
    <string name="data_type">Data Type</string>
    <string name="export_cap">EXPORT</string>
    <string name="point_name">Point_name</string>
    <string name="easting">Easting</string>
    <string name="northing">Northing</string>
    <string name="elevation">Elevation</string>
    <string name="date">Date</string>
    <string name="reord_type">Record Type</string>
    <string name="precision_type">Precision Type</string>
    <string name="image">Image</string>
    <string name="area_name">Area Name</string>
    <string name="point_name_new">Point Name</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="altitude">altitude</string>
    <string name="accuracy">accuracy</string>
    <string name="createat">createat</string>
    <string name="status_new">status</string>
    <string name="view_map">View Map</string>
    <string name="yes_new">YES!</string>
    <string name="device_configured_successfully">Device configured successfully</string>
    <string name="update_stake_point">Update stake point</string>
    <string name="sno">sNo</string>
    <string name="point_code">Point_code</string>
    <string name="horizontal_precision">Horizontal Precision</string>
    <string name="vertical_precision">Vertical Precision</string>
    <string name="exit_dialog">Exit Dialog</string>
    <string name="exit_directly">Exit Directly</string>
    <string name="turn_off_reciever_exit">Turn off reciever &amp; exit</string>
    <string name="send_via_telegram">Send Via Telegram</string>
</resources>