<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/matchParent"
    android:orientation="vertical"
    android:background="@drawable/dialog_positive_round">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        card_view:cardBackgroundColor="@color/color_bluedark"
        card_view:cardCornerRadius="@dimen/ten_dp"
        card_view:cardElevation="@dimen/one_dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
        android:id="@+id/lay"
       style="@style/matchWarp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cmethodtext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/update_stake_point"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:layout_marginTop="@dimen/ten_dp"
        android:id="@+id/et"
        android:gravity="center"
        android:background="@drawable/editbox"
        android:layout_width="match_parent"
        android:hint="@string/point_name_new"
        android:layout_height="@dimen/forty_dp">

    </EditText>


    <EditText
        android:layout_marginTop="@dimen/ten_dp"
        android:id="@+id/et1"
        android:gravity="center"
        android:background="@drawable/editbox"
        android:layout_width="match_parent"
        android:hint="@string/easting"
        android:layout_height="@dimen/forty_dp">

    </EditText>

    <EditText
        android:layout_marginTop="@dimen/ten_dp"
        android:id="@+id/et2"
        android:gravity="center"
        android:background="@drawable/editbox"
        android:layout_width="match_parent"
        android:hint="@string/northing"
        android:layout_height="@dimen/forty_dp">

    </EditText>

    <EditText
        android:layout_marginTop="@dimen/ten_dp"
        android:id="@+id/et3"
        android:gravity="center"
        android:background="@drawable/editbox"
        android:layout_width="match_parent"
        android:hint="@string/elevation"
        android:layout_height="@dimen/forty_dp">

    </EditText>



    <Button
        style="@style/matchWarp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:id="@+id/timebt"
        android:text="@string/done"
        android:textColor="@color/white"
        android:background="@drawable/rounbutton" />

</LinearLayout>