<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   style="@style/matchParent"
    android:orientation="vertical"
    tools:context=".Generic.ShowAllActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            style="@style/matchParent"
            android:orientation="vertical">

            <TableLayout
                style="@style/matchWarp">


                <TableRow android:layout_marginEnd="@dimen/five_dp">

                    <TextView
                        android:id="@+id/record_image"
                        android:layout_width="@dimen/eighty_dp"
                        android:layout_height="@dimen/thirty_dp"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/image"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_area_name"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="@dimen/thirty_dp"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/area_name"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_point_name"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="@dimen/thirty_dp"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/point_name_new"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_latitude"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/latitude"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_longitude"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/longitude"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_altitude"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/altitude"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/record_accuracy"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/accuracy"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_createat"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/createat"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/record_status"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/status_new"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/viewmap"
                        android:layout_width="@dimen/hundred_dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_cell"
                        android:fontFamily="serif"
                        android:text="@string/view_map"
                        android:textColor="@color/white" />

                </TableRow>
            </TableLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/records_view"
                 style="@style/matchParent"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="horizontal" />
        </LinearLayout>
    </HorizontalScrollView>



</LinearLayout>