<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/matchMatch"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/bg_white">

    <TextView
        style="@style/matchWrap"
        android:gravity="center"
        android:text="@string/exit_dialog"
        android:textColor="@android:color/black"
        android:textSize="@dimen/twenty_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/light_gray"/>

    <TextView
        style="@style/matchWrap"
        android:gravity="center"
        android:text="@string/exit_directly"
        android:id="@+id/exit"
        android:textColor="@color/colorlightblue"
        android:textSize="@dimen/text_size_seventeen"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"/>


    <TextView
        style="@style/wrapContent"
        android:gravity="center"
        android:text="@string/turn_off_reciever_exit"
        android:id="@+id/turnof"
        android:textColor="@color/colorlightblue"
        android:textSize="@dimen/text_size_seventeen"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"/>

    <TextView
        style="@style/wrapContent"
        android:gravity="center"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:textColor="@color/colorlightblue"
        android:textSize="@dimen/text_size_seventeen"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"/>

</LinearLayout>